--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="https://github.com/Jessycanoronha" class="fa-github">Github</a></li>
-								<li><a href="https://github.com/Jessycanoronha" class="fa-behance">Behance</a></li>
+								<li><a href="https://www.behance.net/jessycaroz0197" class="fa-behance">Behance</a></li>
 								<li><a href="https://twitter.com/JessycaNoronha" class="fa-twitter">Twitter</a></li>
 								<li><a href="https://www.facebook.com/jessyca.noronha" class="fa-facebook">Facebook</a></li>
 
